@@ -18,8 +18,11 @@ import com.liferay.portal.kernel.json.JSONFactoryUtil;
 import com.liferay.portal.kernel.json.JSONObject;
 import com.liferay.portal.kernel.portlet.PortletContainerUtil;
 import com.liferay.portal.kernel.portlet.PortletJSONUtil;
+import com.liferay.portal.kernel.portlet.PortletProvider;
+import com.liferay.portal.kernel.portlet.PortletProviderUtil;
 import com.liferay.portal.kernel.servlet.BufferCacheServletResponse;
 import com.liferay.portal.kernel.settings.ModifiableSettings;
+import com.liferay.portal.kernel.settings.PortletInstanceSettingsLocator;
 import com.liferay.portal.kernel.settings.Settings;
 import com.liferay.portal.kernel.settings.SettingsFactoryUtil;
 import com.liferay.portal.kernel.util.ClassUtil;
@@ -65,12 +68,14 @@ public class TemplateProcessor implements ColumnProcessor {
 			_portlet = PortletLocalServiceUtil.getPortletById(
 				themeDisplay.getCompanyId(), portletId);
 		}
+		else {
+			_portlet = null;
+		}
 
 		_portletAjaxRender = GetterUtil.getBoolean(
 			request.getAttribute(WebKeys.PORTLET_AJAX_RENDER));
 
-		_portletRenderers = new TreeMap<Integer, List<PortletRenderer>>(
-			_renderWeightComparator);
+		_portletRenderers = new TreeMap<>(_renderWeightComparator);
 	}
 
 	public Map<Integer, List<PortletRenderer>> getPortletRenderers() {
@@ -129,8 +134,8 @@ public class TemplateProcessor implements ColumnProcessor {
 		for (int i = 0; i < portlets.size(); i++) {
 			Portlet portlet = portlets.get(i);
 
-			Integer columnCount = new Integer(portlets.size());
-			Integer columnPos = new Integer(i);
+			Integer columnCount = Integer.valueOf(portlets.size());
+			Integer columnPos = Integer.valueOf(i);
 
 			PortletRenderer portletRenderer = new PortletRenderer(
 				portlet, columnId, columnCount, columnPos);
@@ -148,7 +153,7 @@ public class TemplateProcessor implements ColumnProcessor {
 					renderWeight);
 
 				if (portletRenderers == null) {
-					portletRenderers = new ArrayList<PortletRenderer>();
+					portletRenderers = new ArrayList<>();
 
 					_portletRenderers.put(renderWeight, portletRenderers);
 				}
@@ -227,8 +232,9 @@ public class TemplateProcessor implements ColumnProcessor {
 		ThemeDisplay themeDisplay = (ThemeDisplay)_request.getAttribute(
 			WebKeys.THEME_DISPLAY);
 
-		Settings settings = SettingsFactoryUtil.getPortletInstanceSettings(
-			themeDisplay.getLayout(), portletId);
+		Settings settings = SettingsFactoryUtil.getSettings(
+			new PortletInstanceSettingsLocator(
+				themeDisplay.getLayout(), portletId));
 
 		ModifiableSettings modifiableSettings =
 			settings.getModifiableSettings();
@@ -255,14 +261,26 @@ public class TemplateProcessor implements ColumnProcessor {
 		return processPortlet(portletId);
 	}
 
-	private static RenderWeightComparator _renderWeightComparator =
+	@Override
+	public String processPortlet(
+			String portletProviderClassName,
+			PortletProvider.Action portletProviderAction)
+		throws Exception {
+
+		String portletId = PortletProviderUtil.getPortletId(
+			portletProviderClassName, portletProviderAction);
+
+		return processPortlet(portletId);
+	}
+
+	private static final RenderWeightComparator _renderWeightComparator =
 		new RenderWeightComparator();
 
-	private Portlet _portlet;
-	private boolean _portletAjaxRender;
-	private Map<Integer, List<PortletRenderer>> _portletRenderers;
-	private HttpServletRequest _request;
-	private HttpServletResponse _response;
+	private final Portlet _portlet;
+	private final boolean _portletAjaxRender;
+	private final Map<Integer, List<PortletRenderer>> _portletRenderers;
+	private final HttpServletRequest _request;
+	private final HttpServletResponse _response;
 
 	private static class RenderWeightComparator implements Comparator<Integer> {
 
